welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:21: error: not found: value LeveBrosse
      LeveBrosse()
      ^